objects/redwing__Learning__c.object
<CustomObject>
    <fields>
        <fullName>Academy_Certification_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Academy Certification Program</label>
        <referenceTo>Academy_Certification_Program__c</referenceTo>
        <relationshipLabel>Learning Objects</relationshipLabel>
        <relationshipName>Learning_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Configuration_Steps_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration Steps Definition</label>
        <referenceTo>Configuration_Steps_Definition__c</referenceTo>
        <relationshipLabel>Learning Objects</relationshipLabel>
        <relationshipName>Learning_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Id__c</fullName>
        <label>Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interactive_Validation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interactive Validation</label>
        <referenceTo>Interactive_Validation__c</referenceTo>
        <relationshipLabel>Learning Objects</relationshipLabel>
        <relationshipName>Learning_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Dynamic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dynamic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltcomm__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Learning Objects</relationshipLabel>
        <relationshipName>Learning_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Background_Color__c</fullName>
        <inlineHelpText>HEX Color code for the header background color (e.g. #dcdcdc, more examples in : http://www.color-hex.com/)</inlineHelpText>
        <label>Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Background_Image_URL__c</fullName>
        <inlineHelpText>URL for the image displayed in the Learning detail header</inlineHelpText>
        <label>Background Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Current_Published_Version_Formula__c</fullName>
        <formula>IF(!ISBLANK(redwing__Current_Published_Version__c),HYPERLINK(&quot;/&quot;&amp;redwing__Current_Published_Version__c,&quot;Version &quot;&amp;TEXT(redwing__Current_Published_Version__r.redwing__Version__c),&quot;_self&quot;) ,&quot;&quot;)</formula>
        <label>Current Published Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Current_Published_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Published Version</label>
        <referenceTo>redwing__Learning_Version__c</referenceTo>
        <relationshipLabel>Learning Objects</relationshipLabel>
        <relationshipName>Learnings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Custom_Preview_URL__c</fullName>
        <description>URL used for customer customization purposes, currently hidden from the layout and won&apos;t be used by the package</description>
        <label>Custom Preview URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Default_Language_Learning_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Language Learning Object</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>redwing__Learning__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>redwing__Learning__c.redwing__Default_Language_Learning_Object__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>redwing__Learning__c.redwing__Is_Published_Formula__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Learning Objects</relationshipLabel>
        <relationshipName>Learning_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Duration__c</fullName>
        <label>Duration (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Duration_hours__c</fullName>
        <formula>if(!ISBLANK(redwing__Duration__c),
IF(redwing__Duration__c &gt; 59,
TEXT(FLOOR((redwing__Duration__c)/60))&amp;&quot; hr(s) &quot;&amp;TEXT(FLOOR(MOD((redwing__Duration__c)/60,1)*60))&amp;&quot; mins&quot;
,TEXT(FLOOR(redwing__Duration__c))&amp;&quot; mins&quot;
)
,&quot;&quot;)</formula>
        <label>Duration (hours)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Is_Published_Formula__c</fullName>
        <formula>IF(redwing__Published__c,TRUE,FALSE)</formula>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>redwing__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Registration_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the survey to be used for user self-registration</inlineHelpText>
        <label>Registration Survey</label>
        <referenceTo>redwing__Survey__c</referenceTo>
        <relationshipLabel>Learning Objects</relationshipLabel>
        <relationshipName>Learning_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Sync_progress__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this checkbox if you plan to add this learning to multiple Learning Plans and you would like to keep progress in sync between plans</inlineHelpText>
        <label>Sync progress across assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Text_Color__c</fullName>
        <inlineHelpText>HEX Color code for the header text color (e.g. #333333, more examples in : http://www.color-hex.com/)</inlineHelpText>
        <label>Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Learning</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>redwing__Description__c</columns>
        <columns>redwing__Duration__c</columns>
        <columns>redwing__Published__c</columns>
        <columns>redwing__Sync_progress__c</columns>
        <columns>redwing__Current_Published_Version_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>redwing__CheckIns</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>redwing__Description__c</columns>
        <columns>redwing__Duration__c</columns>
        <columns>redwing__Published__c</columns>
        <columns>redwing__Sync_progress__c</columns>
        <columns>redwing__Current_Published_Version_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>redwing__Learning__c.redwing__CheckIn</value>
        </filters>
        <label>CheckIns</label>
    </listViews>
    <listViews>
        <fullName>redwing__ILT</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>redwing__Description__c</columns>
        <columns>redwing__Duration__c</columns>
        <columns>redwing__Published__c</columns>
        <columns>redwing__Sync_progress__c</columns>
        <columns>redwing__Current_Published_Version_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>redwing__Learning__c.redwing__ILT</value>
        </filters>
        <label>ILT</label>
    </listViews>
    <listViews>
        <fullName>redwing__ILT_Events</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>redwing__Description__c</columns>
        <columns>redwing__Duration__c</columns>
        <columns>redwing__Published__c</columns>
        <columns>redwing__Sync_progress__c</columns>
        <columns>redwing__Current_Published_Version_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>redwing__Learning__c.redwing__ILT_Event</value>
        </filters>
        <label>ILT Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>redwing__Quizzes</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>redwing__Description__c</columns>
        <columns>redwing__Duration__c</columns>
        <columns>redwing__Published__c</columns>
        <columns>redwing__Sync_progress__c</columns>
        <columns>redwing__Current_Published_Version_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>redwing__Learning__c.redwing__Quiz</value>
        </filters>
        <label>Quizzes</label>
    </listViews>
    <listViews>
        <fullName>redwing__Resources</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>redwing__Description__c</columns>
        <columns>redwing__Duration__c</columns>
        <columns>redwing__Published__c</columns>
        <columns>redwing__Sync_progress__c</columns>
        <columns>redwing__Current_Published_Version_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>redwing__Learning__c.redwing__Resource</value>
        </filters>
        <label>Resources</label>
    </listViews>
    <listViews>
        <fullName>redwing__RichText</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>redwing__Description__c</columns>
        <columns>redwing__Duration__c</columns>
        <columns>redwing__Published__c</columns>
        <columns>redwing__Sync_progress__c</columns>
        <columns>redwing__Current_Published_Version_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>redwing__Learning__c.redwing__RichText</value>
        </filters>
        <label>RichText</label>
    </listViews>
    <listViews>
        <fullName>redwing__Tasks</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>redwing__Description__c</columns>
        <columns>redwing__Duration__c</columns>
        <columns>redwing__Published__c</columns>
        <columns>redwing__Sync_progress__c</columns>
        <columns>redwing__Current_Published_Version_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>redwing__Learning__c.redwing__Task</value>
        </filters>
        <label>Tasks</label>
    </listViews>
    <listViews>
        <fullName>rwscorm__Courses</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>redwing__Description__c</columns>
        <columns>redwing__Duration__c</columns>
        <columns>redwing__Published__c</columns>
        <columns>redwing__Sync_progress__c</columns>
        <columns>redwing__Current_Published_Version_Formula__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>redwing__Learning__c.rwscorm__Course</value>
        </filters>
        <label>Media</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Learning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Objects</pluralLabel>
    <recordTypes>
        <fullName>redwing__CheckIn</fullName>
        <active>true</active>
        <description>Check-In Learning Activity</description>
        <label>Check-In</label>
    </recordTypes>
    <recordTypes>
        <fullName>redwing__ILT</fullName>
        <active>true</active>
        <description>Overview of the ILT Class learning object and its objective</description>
        <label>ILT Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>redwing__ILT_Event</fullName>
        <active>true</active>
        <description>Overview of the ILT Event learning object and its objective</description>
        <label>ILT Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>redwing__Quiz</fullName>
        <active>true</active>
        <description>Quiz Learning Activity</description>
        <label>Quiz</label>
    </recordTypes>
    <recordTypes>
        <fullName>redwing__Resource</fullName>
        <active>true</active>
        <description>Resource (URL) Learning Activity</description>
        <label>Resource</label>
    </recordTypes>
    <recordTypes>
        <fullName>redwing__RichText</fullName>
        <active>true</active>
        <description>Rich Text Activity</description>
        <label>Rich Text</label>
    </recordTypes>
    <recordTypes>
        <fullName>redwing__Task</fullName>
        <active>true</active>
        <description>Task Learning Activity</description>
        <label>Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>rwscorm__Course</fullName>
        <active>true</active>
        <description>еLearning Course (SCORM, Videos, Youtube, Vimeo)</description>
        <label>Media</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>redwing__LMS_Approval_Sharing__c</fullName>
        <label>LMS Approval Sharing</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>redwing__LMS_Sharing__c</fullName>
        <label>LMS Sharing</label>
    </sharingReasons>
</CustomObject>